# oss2swift

./: .gitignore  AUTHORS  MANIFEST.in  README.md  bindep.txt  pip-selfcheck.json  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/source/: conf.py  oss2swift.rst
etc/: object-server.conf-sample  proxy-server.conf-sample
o2s-curl/: NOTICE.txt  README  o2scurl.pl
oss2swift/: __init__.py  acl_handlers.py  acl_utils.py  cfg.py  etree.py  exception.py  middleware.py  oss_token_middleware.py  request.py  response.py  subresource.py  utils.py
oss2swift/controllers/: __init__.py  acl.py  base.py  bucket.py  cors.py  life_cycle.py  location.py  logging.py  multi_delete.py  multi_upload.py  obj.py  oss_acl.py  referer.py  service.py  versioning.py  website.py
oss2swift/schema/: \  c_or_sconfiguration.rng  list_all_my_buckets_result.rng  list_bucket_result.rng  referer_configuration.rng  website_configuration.rng
oss2swift/test/functional/: __init__.py  oss2swift.config  oss_test_client.py  run_daemon.py  run_test.sh  test_acl.py  test_bucket.py  test_multi_delete.py  test_multi_upload.py  test_object.py  test_presigned.py  test_service.py  utils.py
oss2swift/test/unit/: __init__.py  helpers.py  test_acl.py  test_acl_handlers.py  test_acl_utils.py  test_bucket.py  test_cfg.py  test_etree.py  test_helpers.py  test_location.py  test_logging.py  test_middleware.py  test_multi_delete.py  test_multi_upload.py  test_obj.py  test_oss_acl.py  test_oss_token_middleware.py  test_request.py  test_response.py  test_service.py  test_subresource.py  test_utils.py  (+1 more)
(+3 files in other folders)
