[metadata]
name = oss2swift
version = 1.11.0
summary = Swift AliyunOSS API emulation Middleware
description-file =
    README.md
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[pbr]
skip_authors = True
skip_changelog = True

[files]
packages =
    oss2swift

[entry_points]
paste.filter_factory =
    oss2swift = oss2swift.middleware:filter_factory
    osstoken = oss2swift.oss_token_middleware:filter_factory

[nosetests]
exe = 1
verbosity = 2
detailed-errors = 1
cover-package = oss2swift
cover-html = true
cover-erase = true
